[package]
name = "gevulot-scroll-sdk"
version = "0.1.0"
edition = "2021"

[features]
default = ["client"]
client = ["dep:reqwest"]

[dependencies]

# Ethereum basis.
alloy-primitives = { version = "=0.8.0", default-features = false, features = ["serde"] }

# Asynchronous runtime.
async-trait = { version = "0.1.83", default-features = false }

# HTTP client.
reqwest = { version = "0.12.9", default-features = false, optional = true, features = ["json"] }

# Serialization.
serde = { version = "1.0.215", default-features = false, features = ["derive", "alloc"] }
